Updating our Details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a new student joining the UCR Extended Coding Bootcamp. I am very excited to be taking a step into this career path!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hemet, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Spending time with my family, Playing video games, and Listening to music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working for a big developer like Activision, or a major company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Menifee, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have had some experiece with coding in the past, and I have always wanted to pursue it. I think it is something that I can really excel at and turn into a career that I love, as well as a great job to support my family.</p>
     </section>
 
     <footer id="footer">
