Updating my details again

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Hemet, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Spending time with my family, Playing video games, and Listening to music</p>
+      <p>Spending time with my family, playing video games, and listening to music</p>
       <h1>What's your dream job?</h1>
       <p>Working for a big developer like Activision, or a major company</p>
       <h1>Where do you live?</h1>
       <p>Menifee, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I have had some experiece with coding in the past, and I have always wanted to pursue it. I think it is something that I can really excel at and turn into a career that I love, as well as a great job to support my family.</p>
+      <p>I have had some experience with coding in the past, and I have always wanted to pursue it. I think it is something that I can really excel at and turn into a career that I love, as well as a great job to support my family.</p>
     </section>
 
     <footer id="footer">
