--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a new student joining the UCR Extended Coding Bootcamp. I am very excited to be taking a step into this career path!</p>
+      <p>Like it states above, my name is Phil. I am 30 years old and have been working in Consumer Electronics since I turned 18. I have not been satisfied with my career, and have finally made the choice to jump in feet first and pursue the career I have been wanting for years. </p>
       <h1>Where I'm From</h1>
       <p>Hemet, CA</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Spending time with my family, playing video games, and listening to music</p>
       <h1>What's your dream job?</h1>
-      <p>Working for a big developer like Activision, or a major company</p>
+      <p>I want to help people. I want to be able to create something that makes people's lives better and easier. I want to be a part of creating something that can give them joy, or save them time on things that are more difficult than they need to be. </p>
       <h1>Where do you live?</h1>
       <p>Menifee, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I have had some experience with coding in the past, and I have always wanted to pursue it. I think it is something that I can really excel at and turn into a career that I love, as well as a great job to support my family.</p>
+      <p>I have had some experience with coding in the past, and I have always wanted to pursue it. It is a lucrative career that is in high demand. There are so many different career options, as well as the ability to be creative. The field is constantly evolving and growing, and I want to be a part of the ever growing digital world.</p>
     </section>
 
     <footer id="footer">
